<resources>
    <string name="app_name">EComm</string>

    <!--App Bar-->
    <string name="appbar_item_search">Search</string>
    <string name="appbar_item_notification">Notification</string>

    <string name="product_price_formatted">$%s</string>

    <!--Bottom App Bar-->
    <string name="bottom_appbar_item_home">Home</string>
    <string name="bottom_appbar_item_category">Category</string>
    <string name="bottom_appbar_item_cart">Cart</string>
    <string name="bottom_appbar_item_account">Account</string>
    <string name="home_page_chip_all">All</string>
    <string name="home_page_chip_new">New</string>
    <string name="home_page_chip_discounts">Discounts</string>
    <string name="home_product_image">Product image</string>
    <string name="cart_product_image">Cart product image</string>
    <string name="cart_button_decrease_item_count">Button decrease item count</string>
    <string name="cart_button_increase_item_count">Button increase item count</string>
    <string name="cart_button_delete_item_from_cart">Button delete item from cart</string>
    <string name="account_favourite">Favourite</string>
    <string name="account_about">About</string>
    <string name="account_settings">Settings</string>
    <string name="account_user_image">User image</string>
    <string name="product_info_description">Description</string>
    <string name="product_info_button_decrease">Button decrease amount of product</string>
    <string name="product_info_button_increase">Button increase amount of product</string>
    <string name="product_info_add_to_cart">Add to cart</string>
    <string name="account_login">Login</string>
    <string name="account_logout_button">Logout button</string>
    <string name="cart_checkbox_all_products">Select all products</string>
    <string name="cart_delete_all_products">Delete all products</string>
    <string name="login_welcome_image">Welcome image</string>
    <string name="login_welcome_text">Welcome</string>
    <string name="login_sign_in_text">Sign in to Continue</string>
    <string name="login_email_hint">Your Email Address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_remember_me_checkbox">Remember me</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_don_t_have_an_account_text">Don\'t have an account?</string>
    <string name="login_sign_up_text_button">Sign up</string>
    <string name="register_image">Register image</string>
    <string name="register_register_text">Register</string>
    <string name="register_details_text">Enter your personal details to create your account</string>
    <string name="register_first_name_hint">First Name</string>
    <string name="register_last_name_hint">Last Name</string>
    <string name="register_user_name_hint">User Name</string>
    <string name="register_phone_number_hint">Phone Number</string>
    <string name="register_email_hint">E-mail</string>
    <string name="register_password_hint">Password</string>
    <string name="register_confirm_password_hint">Confirm password</string>
    <string name="register_sign_up">Sign Up</string>


</resources>